<resources>
    <string name="app_name">InInsta</string>

    <!--AdMob Ads-->
    <string name="admob_app_id" translatable="false">ca-app-pub-4577382853353362~8158259293</string>
    <string name="admob_banner_id" translatable="false">ca-app-pub-4577382853353362/1421282949</string>
    <string name="admob_inter_id" translatable="false">ca-app-pub-4577382853353362/1401279257</string>
    <string name="admob_Native_id" translatable="false">ca-app-pub-4577382853353362/7991652035</string>



    <!-- Email, Privacy, Developer Account -->
    <string name="email_feedback">banrossyn@gmail.com</string>
    <string name="policy_url">https://banrossyn.blogspot.com/2022/01/InInsta.html</string>
    <string name="developer">Ban Rossyn</string>
    <string name="developer_account_link">https://play.google.com/store/apps/dev?id=5306067645342206751</string>


    <string name="download_file">File Name :</string>
    <string name="download_title">Do you want to download?</string>
    <!-- Strings -->
    <string name="getting_downloading_link">Getting Downloading Link.. .</string>
    <string name="download_started">Download Started</string>
    <string name="yes">Yes</string>
    <string name="want_download_media">Don\'t Want to Download Media from Private Account?</string>
    <string name="rating_promote">We are working hard for a better user experience. \nWe\'d greatly appreciate if you can rate us.</string>
    <string name="rating_title_1">Oh, no!</string>
    <string name="rating_title_2">We like you too!</string>
    <string name="rating_text_1">Please leave us some feedback.</string>
    <string name="rating_text_4">Thanks for your feedback.</string>
    <string name="rating_text_5">The best we can get :)</string>
    <string name="rating_dialog_submit">Submit</string>
    <string name="share_txt">Hey view/download this image</string>
    <string name="share_image_via">Share File via....</string>
    <string name="choose_email">Choose an app</string>
    <string name="feedback">Feed back</string>
    <string name="rating_dialog_feedback_title">Feedback</string>
    <string name="preview">Preview</string>
    <string name="enter_url">Enter Url</string>
    <string name="enter_valid_url">Enter Valid Url</string>

    <string name="app_not_available">App Not Available.</string>
    <string name="no_app_installed">No application found to open this file.</string>
    <string name="no_result">No Result Found</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <string name="delete_item">Are you sure you want to delete this item ?</string>
    <string name="file_deleted">File Deleted.</string>
    <string name="cancel">Cancel</string>
    <string name="no_net_conn">No Internet Connection</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="home">Home</string>
    <string name="login">Log in</string>
    <string name="logout">Log out</string>
    <string name="copy_link">COPY LINK</string>
    <string name="_01">01</string>


    <string name="paste_link">Paste Link</string>
    <string name="download">Download</string>
    <string name="download_folder">InInsta Download Folder</string>
    <string name="save_folder">/storage/emulated/0/Download/In Insta</string>

    <string name="help">Help</string>

    <string name="account">Profile</string>
    <string name="stories">Stories</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="more_apps">More Apps</string>
    <string name="settings">Settings</string>

    <string name="ad_attribution">Ad</string>
    <string name="login_with_instagram">Must Login With Instagram</string>
</resources>