<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_menu_shape"
    android:layout_gravity="bottom"
    android:elevation="2dp"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom">

        <View
            android:layout_width="30dp"
            android:layout_height="5dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/background_submit"
            android:backgroundTint="@color/colorInActive"
           />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_delete"
            app:tint="@color/colorInActive"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/delete_item"
            android:textSize="18sp"
            android:textColor="@color/colorInActive"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewCancel"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/background_card_paste"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/colorInActive"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewDelete"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/background_card_paste"
                android:backgroundTint="@color/download_color_tint"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/delete"
                android:textColor="@color/colorInActive"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>