<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayoutFolder"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/background_menu_shape"
        android:backgroundTint="@color/bluesnormal"
        android:clickable="true"
        android:elevation="5dp"
        android:focusable="true"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center_vertical|left"
                android:src="@drawable/ic_round_folder"
                app:tint="@color/colorInActive" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/download_folder"
                    android:textColor="@color/colorInActive"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/save_folder"
                    android:textColor="@color/colorInActive"
                    android:textSize="10sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutCode"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/background_menu_shape"
        android:backgroundTint="@color/bluesnormal"
        android:clickable="true"
        android:elevation="5dp"
        android:focusable="true"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutFolder"
        tools:layout_editor_absoluteX="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center_vertical|left"
                android:adjustViewBounds="true"
                android:src="@drawable/baseline_code_24"
                app:tint="@color/colorInActive" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:gravity="center"
                android:text="Github Source Code"
                android:textColor="@color/colorInActive"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayoutPaid"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/background_menu_shape"
        android:backgroundTint="@color/bluesnormal"
        android:clickable="true"
        android:elevation="5dp"
        android:focusable="true"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCode"
        tools:layout_editor_absoluteX="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center_vertical|left"
                android:adjustViewBounds="true"
                android:src="@drawable/baseline_attach_money_24"
                app:tint="@color/colorInActive" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:gravity="center"
                android:text="Paid Application"
                android:textColor="@color/colorInActive"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayoutShare"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/background_menu_shape"
        android:backgroundTint="@color/bluesnormal"
        android:clickable="true"
        android:elevation="5dp"
        android:focusable="true"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutPaid"
        tools:layout_editor_absoluteX="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center_vertical|left"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_share"
                app:tint="@color/colorInActive" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:gravity="center"
                android:text="@string/share"
                android:textColor="@color/colorInActive"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutRate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/background_menu_shape"
        android:backgroundTint="@color/bluesnormal"
        android:clickable="true"
        android:elevation="5dp"
        android:focusable="true"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutShare"
        tools:layout_editor_absoluteX="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center_vertical|left"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_round_rate"
                app:tint="@color/colorInActive" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:gravity="center"
                android:text="@string/rate_us"
                android:textColor="@color/colorInActive"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutFeedBack"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/background_menu_shape"
        android:backgroundTint="@color/bluesnormal"
        android:clickable="true"
        android:elevation="5dp"
        android:focusable="true"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutRate"
        tools:layout_editor_absoluteX="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center_vertical|left"
                android:adjustViewBounds="true"
                android:padding="2dp"
                android:src="@drawable/ic_round_feedback"
                app:tint="@color/colorInActive" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"

                android:gravity="center"
                android:text="@string/feedback"
                android:textColor="@color/colorInActive"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutPrivacy"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/background_menu_shape"
        android:backgroundTint="@color/bluesnormal"
        android:clickable="true"
        android:elevation="5dp"
        android:focusable="true"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutFeedBack"
        tools:layout_editor_absoluteX="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center_vertical|left"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_round_privacy"
                app:tint="@color/colorInActive" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:gravity="center"
                android:text="@string/privacy_policy"
                android:textColor="@color/colorInActive"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutApps"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/background_menu_shape"
        android:backgroundTint="@color/bluesnormal"
        android:clickable="true"
        android:elevation="5dp"
        android:focusable="true"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutPrivacy"
        tools:layout_editor_absoluteX="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center_vertical|left"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_round_apps"
                app:tint="@color/colorInActive" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:gravity="center"
                android:text="@string/more_apps"
                android:textColor="@color/colorInActive"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutApps"
        app:srcCompat="@drawable/logo"
        app:tint="@color/colorInActive" />


</androidx.constraintlayout.widget.ConstraintLayout>